@@ -27,7 +27,7 @@ ordihull(ord, groups, display = "sites", draw = c("lines","polygon", "none"),
          show.groups, label = FALSE,  ...)
 ordiellipse(ord, groups, display="sites", kind = c("sd","se"), conf,
          draw = c("lines","polygon", "none"), w = weights(ord, display),
-         show.groups, label = FALSE, ...)
+         show.groups, col = NULL, label = FALSE, ...)
 ordispider(ord, groups, display="sites", w = weights(ord, display),
          show.groups, label = FALSE, ...)
 ordiarrows(ord, groups, levels, replicates, display = "sites",
@@ -83,7 +83,10 @@ ordicluster(ord, cluster, prune = 0, display = "sites",
     2df. }
   \item{cluster}{Result of hierarchic cluster analysis, such as
     \code{\link{hclust}} or \code{\link[cluster]{agnes}}.}
-  \item{lty, col, lwd}{Line type, line colour and line width used for 
+  \item{col}{Colour of ellipses or ellipse fills in \code{ordiellipse}
+    or lines in \code{ordigrid}.  For other functions the effect depends
+    on the underlining functions this argument is passed to.}
+  \item{lty, lwd}{Line type, line width used for 
     \code{level}s and \code{replicate}s in \code{ordigrid}.}
   \item{prune}{Number of upper level hierarchies removed from the
     dendrogram. If \code{prune} \eqn{>0}, dendrogram will be
