@@ -11,7 +11,7 @@
 
 \usage{
 ordilabel(x, display, labels, choices = c(1, 2), priority, cex = 0.8,
-    fill = "white", border = NULL, ...)
+    fill = "white", border = NULL, col = NULL, ...)
 }
 
 \arguments{
@@ -30,6 +30,8 @@ ordilabel(x, display, labels, choices = c(1, 2), priority, cex = 0.8,
     of \code{\link{polygon}}).}
   \item{border}{The colour and visibility of the border of the label as
     defined in \code{\link{polygon}}).}
+  \item{col}{Text colour. Default \code{NULL} will give the value of
+    \code{border} or \code{par("fg")} if \code{border} is \code{NULL}.} 
   \item{\dots}{Other arguments (passed to \code{\link{text}}). }
 }
 
